# data-coding-challenge

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
clickhouse/: init-db.sql
dagster_project/: __init__.py  definitions.py  resources.py
dagster_project/assets/: ingest.py
data/raw/: ad_units.csv  publishers.csv
data/raw/campaigns/: campaigns_export.csv
data/raw/diagnostics/: 2026-02-23.parquet  2026-02-24.parquet  2026-02-25.parquet  2026-02-26.parquet  2026-02-27.parquet  2026-02-28.parquet  2026-03-01.parquet  2026-03-02.parquet  2026-03-03.parquet  2026-03-04.parquet  2026-03-05.parquet  2026-03-06.parquet  2026-03-07.parquet  2026-03-08.parquet  2026-03-09.parquet  2026-03-10.parquet  2026-03-11.parquet  2026-03-12.parquet  2026-03-13.parquet  2026-03-14.parquet  2026-03-15.parquet  2026-03-16.parquet  2026-03-17.parquet  2026-03-18.parquet  2026-03-19.parquet  2026-03-20.parquet  2026-03-21.parquet  2026-03-22.parquet  2026-03-23.parquet  2026-03-24.parquet
data/raw/events/: 2026-02-23.parquet  2026-02-24.parquet  2026-02-25.parquet  2026-02-26.parquet  2026-02-27.parquet  2026-02-28.parquet  2026-03-01.parquet  2026-03-02.parquet  2026-03-03.parquet  2026-03-04.parquet  2026-03-05.parquet  2026-03-06.parquet  2026-03-07.parquet  2026-03-08.parquet  2026-03-09.parquet  2026-03-10.parquet  2026-03-11.parquet  2026-03-12.parquet  2026-03-13.parquet  2026-03-14.parquet  2026-03-15.parquet  2026-03-16.parquet  2026-03-17.parquet  (+7 more)
dbt/: Dockerfile  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
(+16 files in other folders)
