[project]
name = "venatus-data-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dbt-core",
    "dbt-clickhouse",
    "clickhouse-connect",
    "pyarrow",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]
